Add .gitignore to exclude non-required files

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,13 @@ build/
 dist/
 *.egg-info/
 .eggs/
+__pycache__/
+*.py[cod]
+.ipynb_checkpoints/
+.DS_Store
+.env
+.venv/
+build/
+dist/
+*.egg-info/
+.eggs/
